--- a/DeezerProyecto/app/src/main/res/layout/fragment_playlist.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_playlist.xml
@@ -26,6 +26,7 @@
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 android:background="@drawable/borde_redondo"
+                android:clipToOutline="true"
                 android:contentDescription="Imagen de la Playlist" />
 
             <ImageButton
