--- a/DeezerProyecto/app/src/main/res/layout/fragment_playlists_publicas.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_playlists_publicas.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:text="Explora lo Social"
             android:textColor="@android:color/white"
-            android:textSize="22sp"
+            android:textSize="24sp"
             android:textStyle="bold"
             android:layout_marginBottom="4dp" />
 
@@ -41,11 +41,12 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="16dp"
-            android:background="@drawable/fondo_tarjeta"
+            android:background="@drawable/fondo_tarjeta_gris"
             android:gravity="center_vertical"
             android:layout_marginBottom="16dp"
             android:clickable="true"
-            android:focusable="true">
+            android:focusable="true"
+            android:elevation="4dp">
 
             <ImageView
                 android:layout_width="48dp"
@@ -70,11 +71,12 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="16dp"
-            android:background="@drawable/fondo_tarjeta"
+            android:background="@drawable/fondo_tarjeta_gris"
             android:gravity="center_vertical"
             android:clickable="true"
             android:focusable="true"
-            android:layout_marginBottom="16dp">
+            android:layout_marginBottom="16dp"
+            android:elevation="4dp">
 
             <ImageView
                 android:layout_width="48dp"
@@ -99,10 +101,11 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="16dp"
-            android:background="@drawable/fondo_tarjeta"
+            android:background="@drawable/fondo_tarjeta_gris"
             android:gravity="center_vertical"
             android:clickable="true"
-            android:focusable="true">
+            android:focusable="true"
+            android:elevation="4dp">
 
             <ImageView
                 android:layout_width="48dp"
@@ -122,3 +125,4 @@
 
     </LinearLayout>
 </ScrollView>
+
