--- a/DeezerProyecto/app/src/main/res/layout/item_amigo_buscar.xml
+++ b/DeezerProyecto/app/src/main/res/layout/item_amigo_buscar.xml
@@ -3,35 +3,35 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="12dp"
-    android:background="@drawable/fondo_tarjeta"
-    android:gravity="center_vertical"
-    android:layout_marginBottom="8dp">
+    android:padding="16dp"
+    android:layout_marginBottom="12dp"
+    android:background="@drawable/fondo_tarjeta_gris"
+    android:gravity="center_vertical">
 
     <ImageView
         android:id="@+id/imagenPerfil"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/ic_user"
-        android:contentDescription="Imagen"
-        android:layout_marginEnd="12dp" />
+        android:layout_marginEnd="12dp"
+        android:background="@drawable/borde_redondo"
+        android:clipToOutline="true" />
 
     <TextView
         android:id="@+id/nombreUsuario"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="correo@correo.com"
-        android:textColor="@android:color/white"
         android:layout_weight="1"
-        android:maxLines="1"
-        android:ellipsize="end" />
+        android:layout_height="wrap_content"
+        android:text="correo@ejemplo.com"
+        android:textColor="@android:color/white"
+        android:textSize="14sp" />
 
     <Button
         android:id="@+id/botonAgregar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Agregar"
-        android:textAllCaps="false"
-        android:textColor="@android:color/white"
-        android:enabled="true"/>
+        android:backgroundTint="@color/colorVerdeSpotify"
+        android:textColor="@android:color/white" />
 </LinearLayout>
+
